// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders wrapped Col correctly 1`] = `
<div class="ant-row css-dev-only-do-not-override-1tm6q75" style="margin-left: -10px; margin-right: -10px;">
  <div>
    <div class="ant-col ant-col-12 css-dev-only-do-not-override-1tm6q75" style="padding-left: 10px; padding-right: 10px;">
      <!---->
    </div>
  </div>
  <div class="ant-col ant-col-12 css-dev-only-do-not-override-1tm6q75" style="padding-left: 10px; padding-right: 10px;">
    <!---->
  </div>
</div>
`;

exports[`Grid should render Col 1`] = `
<div class="ant-col ant-col-2 css-dev-only-do-not-override-1tm6q75">
  <!---->
</div>
`;

exports[`Grid should render Row 1`] = `
<div class="ant-row css-dev-only-do-not-override-1tm6q75">
  <!---->
</div>
`;
